--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -10,6 +10,19 @@
   max-width: 1110px;
 }
 
+.footer {
+  margin-top: 20px;
+  text-align: center;
+  background-color: #f4f4f4;
+  padding: 10px;
+  border-top: 1px solid #ddd;
+}
+
+.footer-text {
+  font-size: 12px;
+  color: #000000;
+}
+
 @media screen and (min-width: 768px) {
   .home-container {
     flex-direction: row;
@@ -53,11 +66,11 @@
 }
 
 .home-heading {
+  color: #1e293b;
   font-family: 'Roboto';
   font-weight: bold;
-  margin-top: 0px;
-  font-size: 36px;
-  color: #1e293b;
+  font-size: 30px;
+  line-height: 1.2;
   text-align: center;
 }
 
@@ -87,7 +100,6 @@
 }
 
 .shop-now-button {
-  width: 150px;
   font-size: 14px;
   font-weight: 400;
   font-family: 'Roboto';
@@ -98,11 +110,13 @@
   border-radius: 6px;
   background-color: #0967d2;
   margin-top: 20px;
+  outline: none;
   cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
   .shop-now-button {
+    width: 150px;
     font-size: 16px;
   }
 }
