--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -9,6 +9,19 @@
   margin: auto;
 }
 
+.footer {
+  margin-top: 20px;
+  text-align: center;
+  background-color: #f4f4f4;
+  padding: 10px;
+  border-top: 1px solid #ddd;
+}
+
+.footer-text {
+  font-size: 12px;
+  color: #000000;
+}
+
 @media screen and (min-width: 992px) {
   .login-form-container {
     flex-direction: row;
@@ -95,6 +108,7 @@
   border-radius: 2px;
   margin-top: 5px;
   padding: 8px 16px 8px 16px;
+  outline: none;
 }
 
 .password-input-field {
@@ -106,6 +120,7 @@
   border-radius: 2px;
   margin-top: 5px;
   padding: 8px 16px 8px 16px;
+  outline: none;
 }
 
 .login-button {
@@ -120,6 +135,7 @@
   background-color: #0b69ff;
   border-radius: 8px;
   border: none;
+  outline: none;
   cursor: pointer;
 }
 
